--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,20 @@
 <h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<% @books.each do |book| %>
+<div>
+  <%= image_tag book.user.get_profile_image %>
+  <p><%= book.title %></p>
+  <p><%= book.body %></p>
+
+</div>
+<% end %>
+
+<h1>New book</h1>
+
+ <%= form_with model: @book do |f| %>
+
+    <h4>Title</h4>
+      <%= f.text_field :title %>
+    <h4>Opinion</h4>
+      <%= f.text_area :body %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
