--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,10 @@
 <% @books.each do |book| %>
 <div>
   <%= image_tag book.user.get_profile_image %>
+  <%= link_to books_path(book.id) do %>
   <p><%= book.title %></p>
+  <%end%>
+
   <p><%= book.body %></p>
 
 </div>
