--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,7 @@
 <% @books.each do |book| %>
 <div>
   <%= image_tag book.user.get_profile_image %>
-  <%= link_to books_path(book.id) do %>
+  <%= link_to book_path(book.id) do %>
   <p><%= book.title %></p>
   <%end%>
 
