--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,18 @@
     <header>
       <% if user_signed_in?  %>
         <li>
+          <%= link_to "Home", user_path(current_user.id), method: :get %>
+        </li>
+        <li>
+          <%= link_to "Users", users_path, method: :get %>
+        </li>
+        <li>
+          <%= link_to "Books", books_path, method: :get %>
+        </li>
+        <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
         </li>
+
       <%else%>
         <li>
           <%= link_to "新規登録", new_user_registration_path %>
