--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,6 +5,8 @@
 
     <h4>Title</h4>
       <%= f.text_field :title %>
+      <h4>Image</h4>
+      <%= f.file_field :profile_image, placeholder: "プロフィール画像",accept: "image/*" %>
     <h4>Opinion</h4>
       <%= f.text_area :body %>
     <%= f.submit 'Update Book' %>
