--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,26 @@
         </li>
       <%end%>
     </header>
+    <h2>User info</h2>
+    <div>
+      <p><%= image_tag current_user.get_profile_image %></p>
+
+  <p>name    <%=current_user.name  %></p>
+  <p>introduction     <%=current_user.introduction  %></p>
+  <p><%= link_to 'User_edit',edit_user_path(current_user.id)  %></p>
+
+</div>
+
+    <h1>New book</h1>
+
+ <%= form_with model: @book do |f| %>
+
+    <h4>Title</h4>
+      <%= f.text_field :title %>
+    <h4>Opinion</h4>
+      <%= f.text_area :body %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
     <%= yield %>
   </body>
 </html>
