--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,12 @@
 <h1>Users#edit</h1>
 
+<h2>User info</h2>
+
+<%= form_with model: @user do |f| %>
+
+    <h4>Name</h4>
+      <%= f.text_field :name %>
+    <h4>Introduction</h4>
+      <%= f.text_area :introduction %>
+    <%= f.submit 'Update User' %>
+  <% end %>
