--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,12 @@
 <h1>Users#edit</h1>
-
+<% if @user.errors.any? %>
+    <%= @user.errors.count %>件のエラーが発生しました
+      <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+      </ul>
+<% end %>
 <h2>User info</h2>
 
 <%= form_with model: @user do |f| %>
