--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,12 @@
 <h1>Books#edit</h1>
-
+<% if @book.errors.any? %>
+        <%= @book.errors.count %>件のエラーが発生しました
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+<% end %>
 <h2>Editing Book</h2>
 <%= form_with model: @book do |f| %>
 
