--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header>
 
 
-     
+
 
        <% if flash[:notice] %>
       <div class="flash">
@@ -33,39 +33,48 @@
           <%= link_to "Books", books_path, method: :get %>
         </li>
         <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
         </li>
 
       <%else%>
+      <li>
+          <%= link_to "Home", '/', method: :get %>
+        </li>
         <li>
-          <%= link_to "新規登録", new_user_registration_path %>
+          <%= link_to "About",'/homes/about', method: :get %>
+        </li>
+        <li>
+          <%= link_to "Sign Up", new_user_registration_path %>
 
         </li>
         <li>
-          <%= link_to "ログイン", new_user_session_path %>
+          <%= link_to "Log in", new_user_session_path %>
         </li>
       <%end%>
     </header>
-    <h2>User info</h2>
-    <div>
-      <p><%= image_tag current_user.get_profile_image %></p>
+    <% if user_signed_in?  %>
+      <h2>User info</h2>
+        <div>
+          <p><%= image_tag current_user.get_profile_image %></p>
 
-  <p>name    <%=current_user.name  %></p>
-  <p>introduction     <%=current_user.introduction  %></p>
-  <p><%= link_to 'User_edit',edit_user_path(current_user.id)  %></p>
+          <p>name    <%=current_user.name  %></p>
+          <p>introduction     <%=current_user.introduction  %></p>
+          <p><%= link_to 'User_edit',edit_user_path(current_user.id)  %></p>
 
-</div>
+        </div>
 
-    <h1>New book</h1>
+          <h1>New book</h1>
 
- <%= form_with model: @book do |f| %>
+       <%= form_with model: @book do |f| %>
 
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
+          <h4>Title</h4>
+            <%= f.text_field :title %>
+          <h4>Opinion</h4>
+            <%= f.text_area :body %>
+          <%= f.submit 'Create Book' %>
+       <% end %>
+    <%end%>
+
     <%= yield %>
   </body>
 </html>
