--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,6 +13,8 @@
 
     <h4>Name</h4>
       <%= f.text_field :name %>
+    <h4>Image</h4>
+      <%= f.file_field :profile_image, placeholder: "プロフィール画像",accept: "image/*" %>
     <h4>Introduction</h4>
       <%= f.text_area :introduction %>
     <%= f.submit 'Update User' %>
