--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -12,10 +12,10 @@
 
     <h4>Title</h4>
       <%= f.text_field :title %>
-     
+
     <h4>Opinion</h4>
       <%= f.text_area :body %>
     <%= f.submit 'Update Book' %>
   <% end %>
-  <%= link_to 'show', book_path(@book.id) %>
-  <%= link_to 'back' , books_path %>
+  <%= link_to 'Show', book_path(@book.id) %>
+  <%= link_to 'Back' , books_path %>
