--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,7 +12,8 @@
 </div>
 
 <div>
-  <%= image_tag @book.user.get_profile_image %>
+  <p><%= image_tag @book.user.get_profile_image %> </p>
+  <p><%= link_to @book.user.name, user_path(@book.user.id)  %></p>
   <p><%= @book.title %></p>
   <p><%= @book.body %></p>
 
