--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,3 @@
 <h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<p><%= link_to "Log in",new_user_session_path %></p>
+<p><%= link_to "Sign up", new_user_registration_path %></p>
