--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,6 @@
   <%= image_tag user.get_profile_image %>
 
   <p><%= user.name%></p>
-  <%= link_to "show", user_path(user.id)  %>
+  <%= link_to "Show", user_path(user.id)  %>
 </div>
 <% end %>
