--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Users#index</h1>
 <h2>Users</h2>
+<%= render 'users/list', user: current_user %>
 <p>image     name</p>
 <% @users.each do |user| %>
 <div>
