--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Books#edit</h1>
 <% if @book.errors.any? %>
-        <%= @book.errors.count %>件のエラーが発生しました
+        <%= @book.errors.count %>errors prohibited this obj from being saved:
         <ul>
           <% @book.errors.full_messages.each do |message| %>
             <li><%= message %></li>
