--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,10 +7,14 @@
           <% end %>
         </ul>
       <% end %>
+<%= render 'users/list', user: current_user %>
 
 <% @books.each do |book| %>
 <div>
-  <%= image_tag book.user.get_profile_image %>
+  <%= link_to user_path(book.user.id) do %>
+  <p><%= image_tag book.user.get_profile_image %></p>
+  <%end%>
+
   <%= link_to book_path(book.id) do %>
   <p><%= book.title %></p>
   <%end%>
