--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,14 @@
 <h1>Users#show</h1>
-
+<%= render 'users/list', user: @user %>
 <h2>Books</h2>
 <p>Title      Opinion</p>
 
 <% @books.each do |book| %>
 <div>
-  <%= image_tag book.user.get_profile_image %>
+   <%= link_to user_path(@user.id) do %>
+  <p><%= image_tag  @user.get_profile_image %></p>
+  <%end%>
+
   <%= link_to book_path(book.id) do %>
   <p><%= book.title %></p>
   <%end%>
