--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,16 +1,24 @@
- <h2>User info</h2>
-        <div>
-          <p><%= image_tag user.get_profile_image %></p>
 
-          <p>name    <%=user.name  %></p>
-          <p>introduction     <%=user.introduction  %></p>
-          <p><%= link_to 'User_edit',edit_user_path(user.id)  %></p>
-
-        </div>
-
-          <h1>New book</h1>
-
-       <%= form_with model: @book1=Book.new do |f| %>
+   <div class="col-md-3">
+     <h2>User info</h2>
+       <%= image_tag user.get_profile_image %>
+       <table class="table">
+         <tbody>
+           <tr>
+             <th>name</th>
+             <th><%=user.name  %></th>
+           </tr>
+           <tr>
+             <th>introduction</th>
+             <th><%=user.introduction  %></th>
+           </tr>
+         </tbody>
+       </table>
+       <div class="row">
+         <%= link_to 'User_edit',edit_user_path(user.id)  %>
+       </div>
+       <h2 class="mt-3">New book</h2>
+         <%= form_with model: @book1=Book.new do |f| %>
 
           <h4>Title</h4>
             <%= f.text_field :title %>
@@ -18,3 +26,6 @@
             <%= f.text_area :body %>
           <%= f.submit 'Create Book' %>
        <% end %>
+   </div>
+
+
