--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Books#edit</h1>
+
 <% if @book.errors.any? %>
         <%= @book.errors.count %>errors prohibited this obj from being saved:
         <ul>
@@ -7,15 +7,24 @@
           <% end %>
         </ul>
 <% end %>
-<h2>Editing Book</h2>
-<%= form_with model: @book do |f| %>
+ <div class="container">
+   <div class="row">
+     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+       <h1>Editing Book</h1>
+         <%= form_with model: @book do |f| %>
 
-    <h4>Title</h4>
-      <%= f.text_field :title %>
+          <h4>Title</h4>
+          <%= f.text_field :title %>
 
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Update Book' %>
-  <% end %>
-  <%= link_to 'Show', book_path(@book.id) %>
-  <%= link_to 'Back' , books_path %>
+          <h4>Opinion</h4>
+          <%= f.text_area :body %>
+          <%= f.submit 'Update Book' %>
+        <% end %>
+        <%= link_to 'Show', book_path(@book.id) %>
+        <%= link_to 'Back' , books_path %>
+     </div>
+   </div>
+ </div>
+
+
+
