--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,26 +1,52 @@
-<h1>Books#index</h1>
- <% if @book.errors.any? %>
+<% if @book.errors.any? %>
         <%= @book.errors.count %>件のエラーが発生しました
         <ul>
           <% @book.errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
         </ul>
-      <% end %>
-<%= render 'users/list', user: current_user %>
-
-<% @books.each do |book| %>
-<div>
-  <%= link_to user_path(book.user.id) do %>
-  <p><%= image_tag book.user.get_profile_image %></p>
-  <%end%>
-
-  <%= link_to book_path(book.id) do %>
-  <p><%= book.title %></p>
-  <%end%>
-
-  <p><%= book.body %></p>
-
-</div>
 <% end %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'users/list', user: current_user %>
+    <div class="col-md-8 offset-md-1">
+     <h2>Books</h2>
+     <table class="table table-hover table-inverse">
+       <thead>
+         <tr>
+           <th></th>
+           <th>Title</th>
+           <th>Opinion</th>
+           <th colspan="3"></th>
+         </tr>
+       </thead>
+       <tbody>
+
+       <% @books.each do |book| %>
+       <tr>
+         <td>
+           <%= link_to user_path(book.user.id) do %>
+              <%= image_tag book.user.get_profile_image %>
+           <%end%>
+         </td>
+         <td>
+           <%= link_to book_path(book.id) do %>
+              <%= book.title %>
+           <%end%>
+         </td>
+         <td>
+           <%= book.body %>
+         </td>
+       </tr>
+     </tbody>
+     <%end%>
+   </table>
+   </div>
+  </div>
+</div>
+
+
+
+
+
 
