--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,22 +13,18 @@
   <body>
     <header>
 
-
-
-
        <% if flash[:notice] %>
       <div class="flash">
         <%= flash[:notice] %>
       </div>
       <% end %>
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
+          <%= link_to "Bookers", books_path, method: :get %>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
             <% if user_signed_in?  %>
-            <li class="nav-item">
-              <%= link_to "Bookers", books_path, method: :get %>
-            </li>
+
             <li class="nav-item">
               <%= link_to "Home", user_path(current_user.id), method: :get %>
             </li>
@@ -45,9 +41,6 @@
 
       <%else%>
 
-        <li class="nav-item">
-          <%= link_to "Bookers", '/', method: :get %>
-        </li>
         <li>
           <%= link_to "Home", '/', method: :get %>
         </li>
