--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,3 @@
-<h1>Users#edit</h1>
 <% if @user.errors.any? %>
     <%= @user.errors.count %>件のエラーが発生しました
       <ul>
@@ -7,9 +6,12 @@
     <% end %>
       </ul>
 <% end %>
-<h2>User info</h2>
 
-<%= form_with model: @user do |f| %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <%= form_with model: @user do |f| %>
 
     <h4>Name</h4>
       <%= f.text_field :name %>
@@ -19,3 +21,9 @@
       <%= f.text_area :introduction %>
     <%= f.submit 'Update User' %>
   <% end %>
+    </div>
+  </div>
+</div>
+
+
+
